# felis

./: CHANGELOG.md  Cargo.toml  README.md  felis.scm  flake.nix
.woodpecker/: ci.yaml
app/: Cargo.toml
app/src/: command.rs  kitty_terminal.rs  lib.rs
app/src/server/: command_listener.rs  command_server.rs  executor.rs  mod.rs
command/: Cargo.toml
command/src/: lib.rs
command_macro/: Cargo.toml
command_macro/src/: lib.rs
command_macro/tests/: command_derive.rs
nix/: felis.nix
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol_core_macro/: Cargo.toml
protocol_core_macro/src/: lib.rs
protocol_macro/: Cargo.toml
protocol_macro/src/: lib.rs
protocol_macro/tests/: protocol_macro_derive.rs
src/: command.rs  fs.rs  kitty_terminal.rs  lib.rs  util.rs
src/server/: command_listener.rs  command_server.rs  executor.rs  mod.rs
test_utils/: Cargo.toml
test_utils/src/: async_reader_writer_stub.rs  lib.rs
tests/: command_listener.rs
