[package]
name = "felis-command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
tokio = {version = "1.33.0", features = ["io-util"]}
async-trait = "0.1.74"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = {version = "1.33.0", features = ["rt", "macros"]}
